--- a/DubiRent-Asp.net/DubiRent/DubiRent/Views/Shared/_LoginPartial.cshtml
+++ b/DubiRent-Asp.net/DubiRent/DubiRent/Views/Shared/_LoginPartial.cshtml
@@ -3,22 +3,7 @@
 @inject SignInManager<AppUser> SignInManager
 @inject UserManager<AppUser> UserManager
 
-@if (SignInManager.IsSignedIn(User))
-{
-    <ul class="navbar-nav">
-        <li class="nav-item">
-            <a class="nav-link text-dark d-flex align-items-center" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">
-                <i class="fas fa-user-circle" style="font-size: 1.5rem;"></i>
-            </a>
-        </li>
-        <li class="nav-item">
-            <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-                <button type="submit" class="nav-link btn btn-link text-dark">Logout</button>
-            </form>
-        </li>
-    </ul>
-}
-else
+@if (!SignInManager.IsSignedIn(User))
 {
     <ul class="navbar-nav">
         <li class="nav-item">
